fix: Remove useless scrollbar

--- a/style.css
+++ b/style.css
@@ -207,7 +207,6 @@ main {
   flex-direction: column;
   align-items: flex-start;
   gap: 6px;
-  overflow-x: auto;
   max-width: 100%;
   padding-bottom: 0.5rem;
 }
